# biospectools

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
biospectools/models/: _pls.py  sparse_pls.py
biospectools/physics/: fresnel_equations.py  misc.py
biospectools/preprocessing/: __init__.py  criterions.py  emsc.py  fringe_emsc.py  me_emsc.py
biospectools/tests/: example_memsc.py  test_emsc.py  test_fringe_emsc.py  test_me_emsc.py  test_memsc.py  test_sparse_pls.py
biospectools/tests/data/: emsc_testdata.xlsx  test_spls_data.mat  test_spls_data_gen_code.m
biospectools/tests/data/memsc_test_data/: MieStd3_corr.csv  MieStd4_param.csv  MieStd5_residuals.csv  MieStd6_niter.csv  MieStd7_RMSE.csv
docs/: conf.py  doi_role.py  get_started.md  index.rst
docs/tutorials/: index.rst  preprocessing.rst
src/biospectools/: __init__.py
src/biospectools/jupyter/: __init__.py  hyperspectral_image_viewers.py
src/biospectools/models/: __init__.py  _pls.py  sparse_pls.py
src/biospectools/physics/: fresnel_equations.py  misc.py
src/biospectools/preprocessing/: __init__.py  criterions.py  dsae.py  emsc.py  fringe_emsc.py  me_emsc.py  replicate_emsc.py
src/biospectools/private/: __init__.py
src/biospectools/utils/: __init__.py  deprecated.py  downloads.py  interpolate.py
tests/: test_dsae.py  test_emsc.py  test_fringe_emsc.py  test_me_emsc.py  test_sparse_pls.py
tests/data/: emsc_testdata_parameters.xlsx
tests/data/memsc_test_data/: MieStd1_rawSpec.csv  MieStd2_refSpec.csv  measuredSpectra.mat
