[metadata]
name = biospectools
version = 0.2.0
author = BioSpecNorway Group
description = Python tools for processing spectral data
url = https://github.com/BioSpecNorway/biospectools
project_urls =
    BiospecNorway Group = https://www.nmbu.no/en/faculty/realtek/research/groups/biospectroscopy

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    numexpr
python_requires = >=3.6

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pandas
    opepyxl

[options.package_data]
biospectools = py.typed

[options.packages.find]
where = src

[tool:pytest]
addopts = --durations=0

[aliases]
test = pytest