[metadata]
name = biospectools
version = 0.3.1
author = BioSpecNorway Group
description = Python tools for processing spectral data
url = https://github.com/BioSpecNorway/biospectools
project_urls =
    BiospecNorway Group = https://www.nmbu.no/en/faculty/realtek/research/groups/biospectroscopy

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    numexpr
    tqdm
python_requires = >=3.6

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pandas
    openpyxl
    xlrd
    flake8>=3.9
    tox>=3.24
dl =
    tensorflow>=2.3.4
private =
    biospectools_private @ git+ssh://git@github.com/BioSpecNorway/biospectools-private.git
docs =
    sphinx>=4.3.0
    myst-parser>=0.16.0
    sphinx-rtd-theme

[options.package_data]
biospectools = py.typed

[options.packages.find]
where = src

[tool:pytest]
addopts = --durations=0

[aliases]
test = pytest

[flake8]
max-line-length = 90
